clusters/first-season/orchard/apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  tls:
    - hosts:
        - longhorn.homehill.de
      secretName: homehill-wildcard-tls
  rules:
    - host: longhorn.homehill.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
